--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,19 @@
 paramiko
 scp
 
+# debug python
+debugpy
+
 # unreal_utils.py
 dearpygui
+
+# manim community
+# you need to install MikTex and ffmpeg on your windows
+# MikTex: https://miktex.org/download
+# MikTex prerequsite packages:
+# amsmath babel-english cbfonts-fd cm-super ctex doublestroke dvisvgm everysel
+# fontspec frcursive fundus-calligra gnu-freefont jknapltx latex-bin
+# mathastext microtype ms physics preview ragged2e relsize rsfs
+# setspace standalone tipa wasy wasysym xcolor xetex xkeyval
+# ffmpeg: https://ffmpeg.org/download.html
+manim
